# habr_sast_dast

./: .env.template  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.yml  docker-compose.zap.yml
backend/: .coverage  Dockerfile  pyproject.toml
backend/config/: admin.py  routers.py  settings.py
backend/users/: constants.py
frontend/: .dockerignore  .prettierrc  Dockerfile  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json
frontend/assets/scss/: main.scss
frontend/pages/: index.vue
gitlab/: build.yml  post-deploy.yml  security.yml
